# rust-bmi-tue

./: Cargo.toml  bmis.json  bmis.txt
.github/workflows/: main.yml
src/: main.rs  tests.rs
