[package]
name = "rust-bmi-tue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = "1.0.0"
inquire = "0.6.1"
serde_json = "1.0"
time = { version ="0.3.21", features = ["serde", "local-offset"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive"] }

